--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "supplyit",
   "devDependencies": {
-    "cypress": "^3.2.0",
+    "cypress": "^3.8.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "randomstring": "^1.1.5"
   }
 }
